<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@drawable/gpc_background">


    <androidx.cardview.widget.CardView
        android:id="@+id/chatButton"
        android:layout_width="0dp"
        android:layout_height="55dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="24dp"
        android:clickable="true"
        android:focusable="true"
        android:foreground="?android:attr/selectableItemBackground"
        app:cardBackgroundColor="@color/mainScreenButtonBackground"
        app:cardCornerRadius="8dp"
        app:layout_constraintBottom_toTopOf="@+id/loginButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/chat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="@string/chat_button"
                android:textColor="@color/mainScreenButtonTextColor"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="@+id/chatIcon"
                app:layout_constraintStart_toEndOf="@+id/chatIcon"
                app:layout_constraintTop_toTopOf="@+id/chatIcon" />

            <ImageView
                android:id="@+id/chatIcon"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginStart="22dp"
                android:layout_marginTop="16dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_chat" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/loginButton"
        android:layout_width="0dp"
        android:layout_height="55dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:clickable="true"
        android:focusable="true"
        android:foreground="?android:attr/selectableItemBackground"
        app:cardBackgroundColor="@color/mainScreenButtonBackground"
        app:cardCornerRadius="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="58dp">

            <TextView
                android:id="@+id/login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="@string/login_button"
                android:textColor="@color/mainScreenButtonTextColor"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="@+id/loginIcon"
                app:layout_constraintStart_toEndOf="@+id/loginIcon"
                app:layout_constraintTop_toTopOf="@+id/loginIcon" />

            <ImageView
                android:id="@+id/loginIcon"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginStart="22dp"
                android:layout_marginTop="16dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_lock" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/animationButton"
        android:layout_width="0dp"
        android:layout_height="55dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="30dp"
        android:clickable="true"
        android:focusable="true"
        android:foreground="?android:attr/selectableItemBackground"
        app:cardBackgroundColor="@color/mainScreenButtonBackground"
        app:cardCornerRadius="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginButton">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/animation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="@string/animation_button"
                android:textColor="@color/mainScreenButtonTextColor"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="@+id/animationIcon"
                app:layout_constraintStart_toEndOf="@+id/animationIcon"
                app:layout_constraintTop_toTopOf="@+id/animationIcon" />

            <ImageView
                android:id="@+id/animationIcon"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginStart="22dp"
                android:layout_marginTop="16dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_animation" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>
